console-experience/src-tauri/build_output_11.txt
    Checking windows v0.52.0
    Checking sysinfo v0.30.13
    Checking console-experience v0.1.0 (C:\Users\diabl\OneDrive\Documentos\shell_game\console-experience\src-tauri)
warning: unused import: `windows::Foundation::Collections::IIterable`
 --> src\adapters\xbox_scanner.rs:4:5
  |
4 | use windows::Foundation::Collections::IIterable;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0599]: no method named `FindPackagesForUser` found for struct `PackageManager` in the current scope
    --> src\adapters\xbox_scanner.rs:26:42
     |
  26 |             let packages = match manager.FindPackagesForUser(&HSTRING::new()) {
     |                                          ^^^^^^^^^^^^^^^^^^^
     |
help: there is a method `FindPackages` with a similar name, but with different arguments
    --> C:\Users\diabl\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\windows-0.52.0\src\Windows\Management\Deployment\mod.rs:2022:5
     |
2022 |     pub fn FindPackages(&self) -> ::windows_core::Result<super::super::Foundation::Collections::IIterable<super::super::ApplicationModel::Package>> {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0282]: type annotations needed
  --> src\adapters\xbox_scanner.rs:36:43
   |
36 |                 if let Ok(is_framework) = package.IsFramework() {
   |                                           ^^^^^^^ cannot infer type

error[E0282]: type annotations needed
  --> src\adapters\xbox_scanner.rs:40:21
   |
40 |                 let id = match package.Id() {
   |                     ^^
...
45 |                 let name = match id.Name() {
   |                                  -- type must be known at this point
   |
help: consider giving `id` an explicit type
   |
40 |                 let id: /* Type */ = match package.Id() {
   |                       ++++++++++++

error[E0282]: type annotations needed
  --> src\adapters\xbox_scanner.rs:46:30
   |
46 |                     Ok(n) => n.to_string(),
   |                              ^ cannot infer type

error[E0282]: type annotations needed
  --> src\adapters\xbox_scanner.rs:51:30
   |
51 |                     Ok(f) => f.to_string(),
   |                              ^ cannot infer type

Some errors have detailed explanations: E0282, E0599.
For more information about an error, try `rustc --explain E0282`.
warning: `console-experience` (lib) generated 1 warning
error: could not compile `console-experience` (lib) due to 5 previous errors; 1 warning emitted
